maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:25: error: not found: value a
    a=check(x,y-1,sol+1)
    ^ShortestPathMaze:26: error: not found: value a
    if (a==true){
        ^ShortestPathMaze:32: error: not found: value check
    if (check(x-1,y,sol+1)==true){
        ^ShortestPathMaze:38: error: not found: value check
    if (check(x+1,y)==true){
        ^ShortestPathMaze:44: error: not found: value check
    if (check(x,y+1)==true){
        ^ShortestPathMaze:51: error: value check is not a member of object Boolean
Boolean check(x:Int,y:Int,sol:Int){
        ^ShortestPathMaze:51: error: (Int, Int, Int) does not take parameters
Boolean check(x:Int,y:Int,sol:Int){
                                  ^